# TropaSplit

./: .gitignore  README.md  test-rpc.js
.github/workflows/: ci.yml
contract/: Cargo.toml  README.md
contract/.cargo/: config.toml
contract/src/: lib.rs  test.rs
contract/test_snapshots/test/: test_double_initialization_fails.1.json  test_double_payment_fails.1.json  test_duplicate_registration_rejected_with_error.1.json  test_happy_path_create_and_pay.1.json  test_happy_path_register_and_reward.1.json  test_happy_path_split_and_pay.1.json  test_room_is_full_fails.1.json  test_state_unregistered_friend.1.json  test_storage_reflects_owner_and_hash_after_registration.1.json  test_unauthorized_add_friend.1.json
contract/test_snapshots/test/tests/: double_payment_rejected.1.json  duplicate_registration_rejected_with_error.1.json  happy_path_friend_pays_and_payer_receives_usdc.1.json  happy_path_register_and_reward.1.json  storage_reflects_owner_and_hash_after_registration.1.json  unauthorized_register_friend_rejected.1.json
frontend/: .env.example  .eslintignore  eslint.config.js  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.tsx  QRCodeDisplay.tsx
frontend/src/context/: WalletContext.tsx  useWallet.ts  walletContextObject.ts
frontend/src/contracts/: index.ts
frontend/src/pages/: Home.tsx  Pay.tsx
frontend/tropa_split/: pubspec.yaml
frontend/tropa_split/lib/: freighter_interop.dart  freighter_interop_stub.dart  freighter_interop_web.dart  main.dart  qr_image_decoder.dart  (+4 more)
(+22 files in other folders)
